# pchjlib

./: CHANGES.md  CHANGES.rst  COPYRIGHT.txt  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
code/: __init__.py  pch125lib.py
src/: __init__.py  pchjicon.py  pchjlib.py  pchjmain.py
src/pchjlib/: __init__.py  caesar_cipher.py  desktop.ini  divisors_multiples.py  fibonacci.py  icon.py  inversion_counting.py  pchjicon.py  pchjlib.py  pchjmain.py  prime_factorization.py  primes.py  sequence_generation.py  special_calculations.py  special_numbers1.py  special_numbers2.py  string_processing.py  twin_abundant.py  utils.py
tests/: test.py  test_pchjlib.py
