[build-system]
requires = ["setuptools>=78.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pchjlib"
version = "1.5.0"
description = "A versatile Python toolkit for mathematical operations and string processing, including prime numbers, Fibonacci sequences, and Caesar ciphers."
readme = { file = "README.md", content-type = "text/markdown" }
license-files = ["LICENSE.txt"]
keywords = ["pchjlib", "math", "education", "numbers", "prime numbers", "fibonacci", "string processing", "caesar cipher"]
authors = [{ name = "Joesifer" }]
urls = { Homepage = "https://github.com/Joesifer/pchjlib" }
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.7"
dependencies = []

[project.optional-dependencies]
gmpy2 = ["gmpy2>=2.1.5"]

[project.scripts]
pchjlib   = "pchjlib.pchjmain:main"
pchj-icon = "pchjlib.pchjicon:main"

[tool.setuptools]
package-dir = { "" = "src" }
zip-safe = true
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pchjlib = ["logo.ico"]

[tool.flake8]
doctests = true

[tool.isort]
force_single_line = true
combine_as_imports = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
known_third_party = ["gmpy2"]
line_length = 80
lines_after_imports = 2