# pyproject.toml

[build-system]
requires = ["setuptools>=78.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pchjlib"
version = "1.6.2"
description = "A versatile Python toolkit for mathematical operations and string processing, including prime numbers, Fibonacci sequences, and Caesar ciphers."
readme = { file = "README.md", content-type = "text/markdown" }
license-files = ["LICENSE.txt"]
keywords = ["pchjlib", "math", "education", "numbers", "prime numbers", "fibonacci", "string processing", "caesar cipher"]
authors = [{ name = "Joesifer" }]
urls = { Homepage = "https://github.com/Joesifer/pchjlib" }
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.7"
dependencies = []

[project.optional-dependencies]
gmpy2 = ["gmpy2>=2.1.5"]
tests = ["unittest"]  # For running tests

[project.scripts]
pchjlib = "pchjlib.pchjmain:main"
pchj-icon = "pchjlib.pchjicon:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = false  # Disable auto-inclusion of non-declared data

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pchjlib = ["logo.ico", "desktop.ini"]  # Explicitly include only needed data files

[tool.setuptools.exclude-package-data]
"*" = ["__pycache__", "*.pyc", "*.pyo"]  # Exclude cache and compiled files

[tool.flake8]
doctests = true

[tool.isort]
force_single_line = true
combine_as_imports = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
known_third_party = ["gmpy2"]
line_length = 80
lines_after_imports = 2