[bdist_wheel]
universal = 0

[flake8]
doctests = 1

[isort]
force_single_line = True
combine_as_imports = True
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
known_third_party = six, docutils, pkg_resources, pytz
known_first_party =
default_section = 
line_length = 80
lines_after_imports = 2

[metadata]
name = pchjlib
version = 0.1.0.1
