[metadata]
name = pchjlib
version = 0.1.1.2
author = Joesifer
description = Thư viện pchjlib là một bộ công cụ đa năng…
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords = pchjlib
url = https://github.com/Joesifer/pchjlib
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Natural Language :: Vietnamese
    Operating System :: OS Independent

[options]
py_modules = pchjlib
package_dir =
    = src
python_requires = >=3.7
install_requires =

[options.extras_require]
numpy = 
    numpy
roman = 
    roman
full = 
    numpy
    roman

[options.entry_points]
console_scripts =
    pchjlib = pchjlib:main

[flake8]
doctests = 1

[isort]
force_single_line = True
combine_as_imports = True
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
known_third_party = six, docutils, pkg_resources, pytz
line_length = 80
lines_after_imports = 2
